--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             }
 
             document.getElementById('resultado').innerText = resultado;
+
+            <a href="./catalog.html">O que fazer ?</a>
         }
+    
     </script>
 </head>
 <body>
@@ -41,5 +44,6 @@
         <button type="button" onclick="classificarTensaoArterial()">Classificar</button>
     </form>
     <p id="resultado"></p>
+
 </body>
 </html>
