--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             document.getElementById('resultado').innerText = resultado;
 
         }
-
+<link rel="stylesheet"
+      href="style.css"
     </script>
 </head>
 <body>
